🌄 WIP Font icon maps